fix filters and search
