# app/lib/api/model/usersFiltersPayloadLocationsItem.ts
@@ -5,9 +5,11 @@
  * OpenAPI spec version: 1.0.0
  */
 import type {UsersFiltersPayloadLocationsItemLocationType} from './usersFiltersPayloadLocationsItemLocationType';
+import type {UsersFiltersPayloadLocationsItemOriginType} from './usersFiltersPayloadLocationsItemOriginType';
 
 export type UsersFiltersPayloadLocationsItem = {
   city: string;
   count: number;
   locationType: UsersFiltersPayloadLocationsItemLocationType;
+  originType: UsersFiltersPayloadLocationsItemOriginType;
 };
